@@ -244,7 +244,7 @@ static NSImage  *downImage = nil;
 // action methods for toolbar...
 - (void) go: (id) sender
 {
-  [self setStatus: @"Running..."];
+  // [self setStatus: @"Running..."];
   [debuggerView putString: @"run\n"];
 }
 
@@ -256,45 +256,45 @@ static NSImage  *downImage = nil;
 
 - (void) continue: (id) sender
 {
-  [self setStatus: @"Continue..."];
+  // [self setStatus: @"Continue..."];
   [debuggerView putString: @"continue\n"];
 }
 
 - (void) restart: (id) sender
 {
-  [self setStatus: @"Restarting..."];
+  // [self setStatus: @"Restarting..."];
   [self interrupt];
   [debuggerView putString: @"run\n"];
-  [self setStatus: @"Running..."];
+  // [self setStatus: @"Running..."];
 }
 
 - (void) next: (id) sender
 {
-  [self setStatus: @"Going to next line."];
+  // [self setStatus: @"Going to next line."];
   [debuggerView putString: @"next\n"];
 }
 
 - (void) stepInto: (id) sender
 {
-  [self setStatus: @"Stepping into method."];
+  // [self setStatus: @"Stepping into method."];
   [debuggerView putString: @"step\n"];  
 }
 
 - (void) stepOut: (id) sender
 {
-  [self setStatus: @"Finishing method."];
+  // [self setStatus: @"Finishing method."];
   [debuggerView putString: @"finish\n"];  
 }
 
 - (void) up: (id) sender
 {
-  [self setStatus: @"Up to calling method."];
+  // [self setStatus: @"Up to calling method."];
   [debuggerView putString: @"up\n"];  
 }
 
 - (void) down: (id) sender
 {
-  [self setStatus: @"Down to called method."];
+  // [self setStatus: @"Down to called method."];
   [debuggerView putString: @"down\n"];  
 }
 
