@@ -1,3 +1,9 @@
+2016-05-05 13:13-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Modules/Debuggers/ProjectCenter/PCDebugger.m
+	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Partial parsing
+	of result records to yield correct status in debuggerView.
+
 2016-05-05 11:23-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Handle more
